docs/7.56/md/abenabap_sql_functions.md
---
title: "Hint"
description: |
  Certain SQL functions(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbuffer_expressions.htm) can be executed in the table buffer(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abentable_buffer_glosry.htm 'Glossary Entry'). If any other SQL functions are used, table b
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_functions.htm"
abapFile: "abenabap_sql_functions.htm"
keywords: ["do", "if", "try", "data", "abenabap", "sql", "functions"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_language_external_data.htm) →  [ABAP Database Access](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abendb_access.htm) →  [ABAP SQL](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql.htm) →  [ABAP SQL - Operands and Expressions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_operands.htm) →  [ABAP SQL - SQL Expressions sql\_exp](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapsql_expr.htm) →  [sql\_exp - sql\_func](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensql_builtin_func.htm) →  [ABAP SQL - Built-In Functions sql\_func](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_builtin_functions.htm) → 

sql\_func - SQL Functions

The following built-in [SQL functions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensql_functions.htm) can either be specified as standalone functions in ABAP SQL or as operands of [SQL expressions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapsql_expr.htm), in all places where SQL expressions are possible.

-   [Numeric functions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensql_arith_func.htm)
-   [String functions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensql_string_func.htm)
-   [Coalesce function](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensql_coalesce.htm)
-   [UUID function](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensql_uuid.htm)

Hint

[Certain SQL functions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbuffer_expressions.htm) can be executed in the [table buffer](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abentable_buffer_glosry.htm "Glossary Entry"). If any other SQL functions are used, [table buffering](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abentable_buffering_glosry.htm "Glossary Entry") is bypassed.

Continue
[sql\_func - Numeric Functions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensql_arith_func.htm)
[sql\_func - String Functions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensql_string_func.htm)
[sql\_func - Coalesce Function](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensql_coalesce.htm)
[sql\_func - UUID Function](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensql_uuid.htm)